<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    style="@style/matchParent"
    android:fitsSystemWindows="true">  <!-- this attribute is not required for two pane tablet layout since it will shrink the action bar on the left activity as well.-->

    <!--Adding a Toolbar directly to an AppBarLayout gives you access to the enterAlwaysCollapsed and exitUntilCollapsed scroll
     flags, but not the detailed control on how different elements react to collapsing. For that, you can use CollapsingToolbar
     Layout:-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            style="@style/matchParent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/detail_backdrop"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/AppTheme.Toolbar"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <com.example.manvi.movieappstage1.FloatingActionButton
        android:id="@+id/favourite_fab"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/favourite_backgroup"
        android:clickable="true"
        android:elevation="@dimen/fab_elevation"
        android:stateListAnimator="@animator/fab_anim"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end">

        <ImageView
            android:layout_width="@dimen/fab_icon_size"
            android:layout_height="@dimen/fab_icon_size"
            android:layout_gravity="center"
            android:duplicateParentState="true"
            android:src="@drawable/favourite_selector"
            android:contentDescription="@string/mark_as_favourite"/>

    </com.example.manvi.movieappstage1.FloatingActionButton>

    <android.support.v4.widget.NestedScrollView
        style="@style/matchParent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            style="@style/matchParent"
            android:orientation="vertical"
            android:paddingTop="2dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/imgae_card"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/matchParent">

                    <ImageView
                        android:id="@+id/image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/movie_image"
                        android:scaleType="fitXY" />

                    <LinearLayout
                        style="@style/matchParent"
                        android:orientation="horizontal"
                        android:paddingLeft="12dp"
                        android:paddingTop="@dimen/padding_dimen">


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Released In:"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Rating:"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Votes:"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Language:"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Genre:"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                        </LinearLayout>

                        <LinearLayout
                            style="@style/matchParent"
                            android:orientation="vertical"
                            android:paddingLeft="5dp">

                            <TextView
                                android:id="@+id/movie_releaseDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                tools:text="Release Date" />

                            <TextView
                                android:id="@+id/movie_rating"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                tools:text="TextView" />

                            <TextView
                                android:id="@+id/movie_votes"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                tools:text="TextView" />

                            <TextView
                                android:id="@+id/language"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                tools:text="TextView" />

                            <TextView
                                android:id="@+id/movie_genre"
                                style="@style/matchParent"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                tools:text="TextView" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/overview"
                        android:text="@string/overview"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:id="@+id/movie_plot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/trailer"
                        android:text="Trailers"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:id="@+id/noTrailer_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/no_Trailers"
                        android:text="@string/no_Trailers"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="16dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:visibility="invisible" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/trailerRecyclerView"
                        style="@style/matchParent"
                        android:clickable="true">
                    </android.support.v7.widget.RecyclerView>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/review"
                        android:text="@string/review"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/ReviewRecyclerView"
                        style="@style/matchParent"
                        android:clickable="true"></android.support.v7.widget.RecyclerView>

                    <TextView
                        android:id="@+id/noReview_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/no_Reviews"
                        android:padding="@dimen/padding_dimen"
                        android:text="@string/no_Reviews"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:visibility="invisible" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>




